rewrite-targets/blue.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      volumes:
      - name: webdata
        emptyDir: {}

      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: webdata
          mountPath: /usr/share/nginx/html

---
apiVersion: v1
kind: Service
metadata:
  name: blue
spec:
  type: ClusterIP
  selector:
    app: blue
  ports:
  - port: 80
    targetPort: 80
