rewrite-targets/ingress-rules-target-haproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    haproxy.org/path-rewrite: /
spec:
  ingressClassName: haproxy
  rules:
  - http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue
            port:
              number: 80

      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green
            port:
              number: 80
