rewrite-targets/ingress-rules-target.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: blue
            port: 
              number: 80
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green
            port: 
              number: 80
